--- a/scrms/main/templates/crumbs/footer.html
+++ b/scrms/main/templates/crumbs/footer.html
@@ -75,7 +75,9 @@
 
 
 
-const LANG = 0 //{{lang}}
+const LANG = {{lang | safe}}
+
+console.log(LANG[0].chat[0].previous)
 const USER_ID = "{{user.init}}"
 const USER_IMG = "{% thumbnail user.image "50x50" crop="center" as im %}{{ im.url }}{% endthumbnail %}"
 const KEY = "{{user.public_key_user}}"
@@ -159,7 +161,7 @@ $(document).ready(function(){
 
   notifyMe()
 
-  CHAT(USER_ID,USER_IMG,KEY,USERS,socket,csrf_token,noty)
+  CHAT(USER_ID,USER_IMG,KEY,USERS,socket,csrf_token,noty,LANG)
 })
 
 
