--- a/scrms/main/templates/crumbs/menu.html
+++ b/scrms/main/templates/crumbs/menu.html
@@ -43,6 +43,7 @@
                 {{user.name}}
                <span class="caret"></span>
              </div>
+             {{LANG}}
            <ul class="dropdown-menu">
              <li><a href="/personal/user/{{user.id}}/">{{lang.0.menu.0.profile}}</a></li>
            </ul>
