--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -8,7 +8,7 @@
   <div id="dialog-chat-content"></div>
 </div>
 
-<div id="scrims_chat" class="container app">
+<div id="scrims_chat" class="container app scrims-chat-hide">
   <div class="row app-one">
     <div class="col-sm-4 side">
       <div class="side-one">
@@ -106,7 +106,7 @@
 
 
       <div class="col-sm-1 col-xs-1  heading-dot pull-right">
-        <i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
+        <i id="close-scrims-chat" class="fa fa-times fa-2x  pull-right" aria-hidden="true"></i>
       </div>
 
       </div>
@@ -159,8 +159,15 @@
 
   </form>
 
-
-
     </div>
+  </div>
+</div>
+
+<div class="chat-close-open">
+    <div class="fa fa-comments common-chat-count-message">
+    <br>
+    {% if common_message != 0 %}
+    <span id="common-chat-count-message" class="badge">{{common_message}}</span>
+    {% endif %}
   </div>
 </div>
