--- a/scrms/static/css/main.css
+++ b/scrms/static/css/main.css
@@ -482,6 +482,36 @@ padding: 20px 20px; */}
    }
 
 
+.scrims-chat-hide{
+  display: none;
+}
+
+.chat-close-open{
+  border:1px solid #999;
+  text-align: center;
+  border-radius:50%;
+  max-width: 60px;
+  max-height: 60px;
+  min-width: 60px;
+  min-height: 60px;
+  background:#fff;
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  z-index:88;
+  text-align:center;
+  color:#93918f;
+  cursor:pointer;
+}
+.common-chat-count-message{
+  padding:12px !important;
+  font-size: 30px;
+}
+
+.chat-close-open-active{
+  color:#293a46;
+}
+
 #dialog_list_users{
   height:200px;
   overflow:auto;
