--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -163,7 +163,7 @@
   </div>
 </div>
 
-<div class="chat-close-open">
+<div class="chat-close-open chat-close-open-style">
     <div class="fa fa-comments common-chat-count-message">
     <br>
     {% if common_message != 0 %}
