--- a/scrms/main/templates/crumbs/stream.html
+++ b/scrms/main/templates/crumbs/stream.html
@@ -1,18 +1,64 @@
 
 <div class="row">
-<div class="col-sm-12 ">
+
+<div class="col-sm-8 col-xs-12">
       <div class="side-one">
-        <div class="row" style="background:#fff;">
+        <div class="row" style="background:#fff;padding:10px;">
 
-          <div class="col-sm-3 col-xs-3 heading-avatar">
+          <div class="col-sm-1 col-xs-1 heading-avatar">
             <div class="heading-avatar-icon">
-
-                <img src="/media/cache/1c/b9/1cb969d2b589af0d1bb5b71be2b451eb.jpg" width="50" height="50">
-
+                <img src="/media/cache/1c/b9/1cb969d2b589af0d1bb5b71be2b451eb.jpg" width="70" height="70">
             </div>
           </div>
 
-  </div>
+          <div class="col-sm-11 col-xs-11 ">
+            <div style="font-size:16px;color:#5f6f81;font-weight:bold;padding: 10px 0;">Иван Иванов Иванович</div>
+            <div class="heading-avatar-icon">
+                <p style="line-height:1.8;">Он будет влиять на вес источника равносильно цитируемости и оперативности. Вовлечённость будет зависеть от доли собственной аудитории сайта-партнёра — количества пользователей, которые приходят на сайт из поиска или по прямой ссылке. Такие читатели, как правило, задерживаются на сайте, чтобы изучить его материалы, и готовы возвращаться туда снова.</p>
+            </div>
+          </div>
+          <div class="col-sm-12 col-xs-12 " style="color:#5f6f81">
+          <div class="col-sm-1 col-xs-1 "></div>
+           <div class="col-sm-2 col-xs-2 ">
+             <div>
+              <span>12 </span><span class="fa fa-thumbs-up fa-2x"></span>
+             </div>
+           </div>
+
+           <div class="col-sm-2 col-xs-2">
+             <div>
+               <span>34 </span><span class=" fa fa-eye fa-2x"></span>
+             </div>
+           </div>
+           <div class="col-sm-2 col-xs-2 ">
+             <span class=" fa fa-clock-o fa-2x"></span> 12 апр
+          </div>
+          </div>
+       </div>
+
+
+       <!-- coments -->
+       <div class="row" style="background:#fff;padding:10px;">
+         <div class="col-sm-1 col-xs-1"></div>
+         <div class="col-sm-9 col-xs-9">
+         <div class="col-sm-1 col-xs-1 ">
+           <div class="heading-avatar-icon">
+               <img src="/media/cache/1c/b9/1cb969d2b589af0d1bb5b71be2b451eb.jpg" width="30" height="30">
+           </div>
+         </div>
+
+         <div class="col-sm-11 col-xs-11 ">
+           <div style="font-size:14px;color:#5f6f81;font-weight:bold;padding: 10px 0;">Иван Иванов Иванович</div>
+           <div class="heading-avatar-icon">
+               <p style="line-height:1.5;font-size:13px;">Он будет влиять на вес источника равносильно цитируемости и оперативности. Вовлечённость ,</p>
+           </div>
+         </div>
+        </div>
+      </div>
+     <!-- /coments -->
+
 </div>
 </div>
+
+
 </div>
