--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -2,7 +2,7 @@
 
 
 
-<!-- чат с блекджеком и шлюхами -->
+<!-- чат -->
 
 <div id="dialog-chat">
   <div id="dialog-chat-content"></div>
@@ -25,13 +25,13 @@
 
 
 
-          <div class="col-sm-1 col-xs-1  heading-dot  pull-right">
+          <!--<div class="col-sm-1 col-xs-1  heading-dot  pull-right">
 
 
 
-          </div>
+          </div>-->
           <div class="col-sm-2 col-xs-2 heading-compose  pull-right">
-            <i class="fa fa-comments fa-2x  pull-right" aria-hidden="true"></i>
+            <i class="chat-close-open fa fa-chevron-down fa-2x  pull-right" aria-hidden="true"></i>
           </div>
 
           <div class="col-sm-2 col-xs-2 heading-compose  pull-right">
@@ -107,7 +107,7 @@
 
 
       <div class="col-sm-1 col-xs-1  heading-dot pull-right">
-        <i id="close-scrims-chat" class="fa fa-times fa-2x  pull-right" aria-hidden="true"></i>
+        <i id="close-scrims-chat" class="fa fa-chevron-down fa-2x  pull-right" aria-hidden="true"></i>
       </div>
 
       </div>
@@ -176,11 +176,11 @@
   </div>
 </div>
 
-<div class="chat-close-open chat-close-open-style">
+<!--<div class="chat-close-open chat-close-open-style">
     <div class="fa fa-comments common-chat-count-message">
     <br>
     {% if common_message != 0 %}
     <span id="common-chat-count-message" class="badge">{{common_message}}</span>
     {% endif %}
   </div>
-</div>
+</div>-->
