--- a/scrms/main/templates/crumbs/stream.html
+++ b/scrms/main/templates/crumbs/stream.html
@@ -1,7 +1,9 @@
 
-<div class="row">
 
-<div class="col-sm-8 col-xs-12">
+<div class="col-sm-1 col-xs-1"></div>
+<div class="col-sm-8 col-xs-10" style="margin:75px 0px">
+
+    {% for item in posts %}
       <div class="side-one">
         <div class="row" style="background:#fff;padding:10px;">
 
@@ -56,9 +58,6 @@
         </div>
       </div>
      <!-- /coments -->
-
+     {% endfor %}
 </div>
-</div>
-
-
 </div>
