--- a/scrms/static/css/main.css
+++ b/scrms/static/css/main.css
@@ -533,9 +533,20 @@ padding: 20px 20px; */}
   color:#93918f;
   cursor:pointer;
 }
-.common-chat-count-message{
-  padding:12px !important;
-  font-size: 30px;
+
+.gn-menu li{
+  position: relative;
+}
+
+#common-chat-count-message{
+font-size: 10px;
+position: absolute;
+left: 9px;
+bottom: 2px;
+padding: 5px 0;
+width: 20px;
+height: 18px;
+text-align: center;
 }
 
 .chat-close-open-active{
@@ -583,7 +594,7 @@ box-shadow: 0 0px 0px 2px #4ecb54;
 }
 
    .app {
-     position: fixed;
+     position: relative;
      overflow: hidden;
      top: 119px;
      height: 600px;
@@ -890,7 +901,19 @@ box-shadow: 0 0px 0px 2px #4ecb54;
   background: url("/static/img/pattern.svg") repeat;
   background-color: #a2a2a2;
 }
+#scrims_chat{
+  /*width: 100%;
+  margin: 20px; max-width: 900px;*/
+}
 
+.box-chat{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(21, 21, 21, 0.8);
+  z-index: 9;
+  top: 0;
+}
    .message {
      padding: 75px 0 !important;
      margin: 0 !important;
@@ -1153,11 +1176,11 @@ box-shadow: 0 0px 0px 2px #4ecb54;
        height: 630px;
      }
      .heading {
-       height: 70px;
+       height: 60px;
        background-color: #009688;
      }
      .fa-2x {
-       font-size: 2.3em !important;
+       /*font-size: 2.3em !important;*/
      }
      .heading-avatar {
        padding: 0 !important;
@@ -1165,7 +1188,7 @@ box-shadow: 0 0px 0px 2px #4ecb54;
      .heading-avatar-icon img {
        height: 50px;
        width: 50px;
-       margin: 2px -5px;
+       margin: -5px -5px;
      }
      .heading-compose {
        padding: 5px !important;
@@ -1183,7 +1206,7 @@ box-shadow: 0 0px 0px 2px #4ecb54;
        cursor: pointer;
      }
      .sideBar {
-       height: 500px;
+       height: auto;
        overflow-x: hidden;
      }
      .sideBar-body {
