--- a/scrms/main/templates/base.html
+++ b/scrms/main/templates/base.html
@@ -21,7 +21,7 @@
       {% block content %}
       {% endblock %}
     </div>
-        <div id="scrims-chat-box" class="container box-chat " style="">
+        <div id="scrims-chat-box" class="container box-chat scrims-chat-hide" style="">
           {% include 'crumbs/chat.html' %}
         </div>
     </body>
